--- a/src/global.scss
+++ b/src/global.scss
@@ -25,3 +25,8 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+/* Custom CSS */
+@import './sass/variables.override.scss';
+@import './sass/scrollHorizontal.scss';
+@import './sass/fonts.scss';
+@import './sass/app.scss';
