--- a/src/app/avatar/adventurer/adventurer.page.scss
+++ b/src/app/avatar/adventurer/adventurer.page.scss
@@ -250,3 +250,14 @@ ion-icon {
  padding-bottom: 25px;
 }
 
+
+.container-range{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
