salvando avatar na galeria, tipo png

--- a/src/app/avatar/adventurer/adventurer.page.html
+++ b/src/app/avatar/adventurer/adventurer.page.html
@@ -36,7 +36,7 @@
             <ion-col>
               <strong>Adventurer</strong>
             </ion-col>
-            <ion-button size="small" fill="clear" color="dark" class="icons" (click)="download()">
+            <ion-button size="small" fill="clear" color="dark" class="icons" (click)="getPermissionToDownload()">
               <ion-icon name="download-outline" size="large" ></ion-icon>
             </ion-button>
           </ion-row>
