convertendo svg para png

--- a/src/app/avatar/adventurer/adventurer.page.html
+++ b/src/app/avatar/adventurer/adventurer.page.html
@@ -42,7 +42,8 @@
           </ion-row>
         </div>
         <div class="post-media" >
-          <img src= "{{ url}}"/>
+          <img  id="svg"  src= "{{ url}}"/>
+          <canvas id="myCanvas" ></canvas>
         </div>
         <div class="post-actions">
           <ion-row>
