--- a/src/app/avatar/adventurer/adventurer.page.scss
+++ b/src/app/avatar/adventurer/adventurer.page.scss
@@ -185,6 +185,7 @@
   }
 
 }
+
 .container-input-name{
   width: 100%;
   padding-left: 10px;
@@ -199,7 +200,6 @@
   }
 
 }
-
 
 .buttons-eyes{
   display: flex;
@@ -248,7 +248,6 @@ ion-icon {
  padding-bottom: 25px;
 }
 
-
 .container-range{
   width: 80%;
   height: 100%;
@@ -264,9 +263,13 @@ ion-icon {
   }
 }
 
-
 .advanced-options-card{
   width: 100%;
   height: 500px;
 }
 
+#myCanvas{
+  display: none;
+  width: 1024px;
+  height: 1024px;
+}
